--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "laugfspower",
   "private": true,
@@ -13,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.4",
     "aos": "^2.3.4",
